* knisterpeter recommended to slip the flavours from the core. This is   now done. There are now a core gem and a few flavour plugin gems. * the example is still grown currently it is not really usable   there are some lxc stuff added, and the deployer.sh has now gzip   resources for smaller files. * upcoming changes for wifi ap configuration is added.